Fix download buttons on mobile view

--- a/content/_assets/styles/custom.css
+++ b/content/_assets/styles/custom.css
@@ -97,17 +97,25 @@
 .quire-cover .other-format-buttons ul .button:hover {
   background-color: var(--dark-blue);
 }
-.quire-cover .other-format-buttons ul .button a{
+.quire-cover .other-format-buttons ul .button a {
   border-bottom-width: 0 !important;
 }
-
 .quire-cover .other-format-buttons ul .button:hover a:not(.q-figure__modal-link):not(.q-figure__reset-link):not(.quire-contributor__url):not(.accordion-section__heading-link),
 .quire-cover .other-format-buttons ul .button a:hover:not(.q-figure__modal-link):not(.q-figure__reset-link):not(.quire-contributor__url):not(.accordion-section__heading-link) {
   border-bottom-width: 0 !important;
   color: var(--white) !important;
 }
+.quire-cover .other-format-buttons ul li.button {
+  margin-left: .5rem;
+  margin-right: .5rem;
+}
 .quire-cover .quire-page__content .container .content blockquote {
-  margin-right: 3rem;
+  margin-right: 1.5rem;
+}
+@media screen and (min-width: 500px) {
+  .quire-cover .quire-page__content .container .content blockquote {
+    margin-right: 3rem;
+  }
 }
 
 /* NAVBAR
